Dirty Cafe Analysis Commited

--- a/Dirty Cafe Analysis/notebook/dirty_cafe_analysis.ipynb
+++ b/Dirty Cafe Analysis/notebook/dirty_cafe_analysis.ipynb
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "dirty_cafe = pd.read_csv(\"dirty_cafe_sales.csv\")\n",
+    "dirty_cafe = pd.read_csv(\"..\\data\\dirty_cafe_sales.csv\")\n",
     "dirty_cafe.head()"
    ]
   },
